# summer2021-41

./: .gitignore  7.14-7.20.md  7.6-7.13.md  CMakeLists.txt  README.en.md  README.md  SummerPlan.md  color.h  global_info.c  global_info.h  memory_collection.c  user_procinfo.c  user_procinfo.h
doc/: 7.14-7.20.md  7.20-8.15.md  7.6-7.13.md  8.15-9.15.md  SummerPlan.md
include/: color.h  global_info.h  numa.h  user_procinfo.h
src/: global_info.c  main.c  numastat  numastat.c  user_procinfo.c
